# CppDiagHelper

./: .travis.yml  CMakeLists.txt  README.md
iterations/: 01.txt  g++_version
iterations/01/: E-01.cpp  E-01.txt  W-01.cpp  W-02.txt  W-03.cpp  W-03.h  W-03.txt  make_outputs.sh  syntax.txt
iterations/01_Werror/: E-02.txt  W-01.txt  W-02.txt  W-03.h  W-03.txt  make_outputs.sh  syntax.txt
iterations/02/: E-02.cpp  W-01.txt  W-02.cpp  syntax.txt
src/: DescribedException.hpp  TextUI.cpp  TextUI.hpp  gui.cc  gui.h  main.cc  main.cpp  parser.cc  parser.h  test.cc  tui.cc  tui.h  tui_main.cc  ui.cc  ui.h
test/01/: E-01_expected.txt  E-02.txt  E-02_expected.txt  W-01_expected.txt  W-02_expected.txt  W-03.txt  W-03_expected.txt  list.txt
test/02/: E-02_expected.txt  W-01_expected.txt  W-02_expected.txt  W-03_expected.txt
